fixed merch link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 11 2022 21:35:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 11 2022 21:52:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6164da2f9ccb049e4091ad30" data-wf-site="6164da2f9ccb041c9691ad2f">
 <head>
   <meta charset="utf-8">
@@ -35,8 +35,8 @@
           <a href="#SHOWS" class="nav-link">SHOWS</a>
         </li>
         <li class="list-item">
-          <a href="https://sunroomtheband.com/collections/all" target="_blank" class="nav-link">MERCH</a>
-          <link rel="prefetch" href="https://sunroomtheband.com/collections/all">
+          <a href="https://merch.sunroomtheband.com/collections/all" target="_blank" class="nav-link">MERCH</a>
+          <link rel="prerender" href="https://merch.sunroomtheband.com/collections/all">
         </li>
         <li class="list-item">
           <a href="#INFO" class="nav-link">ABOUT</a>
