added social links and bandsintown widget

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 11 2022 21:52:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 25 2022 19:47:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6164da2f9ccb049e4091ad30" data-wf-site="6164da2f9ccb041c9691ad2f">
 <head>
   <meta charset="utf-8">
@@ -62,8 +62,8 @@
   <div id="SHOWS" class="shows">
     <div class="w-container">
       <div class="html-embed w-embed w-script">
-        <div id="seated-55fdf2c0" data-artist-id="1c296b62-808e-4308-9d64-caf638c93409" data-css-version="2"></div>
-        <script src="https://widget.seated.com/app.js"></script>
+        <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script>
+        <a class="bit-widget-initializer" data-artist-name="id_5146112" data-font="Helvetica" data-language="en" data-display-details="false" data-text-color="#000000" data-background-color="#e2ddbd" data-separator-color="#DDDDDD" data-popup-background-color="#ffffff" data-link-color="#A2A2A2" data-link-text-color="#FFFFFF"></a>
       </div>
     </div>
   </div>
@@ -74,6 +74,14 @@
         <div class="div-block-8">
           <div class="text-block-2-copy">Some friends from Southern California who like to surf &amp; make music out of their very hot garage</div>
           <div class="text-block-2"> - luke, ashton, gibby, max</div>
+        </div>
+        <div class="div-block-9">
+          <div class="div-block-11">
+            <a href="https://instagram.com/sun____room?utm_medium=copy_link" target="_blank" class="social-link">Instagram</a>
+            <a href="https://vm.tiktok.com/TTPdrDHQjE/" target="_blank" class="social-link">TikTok</a>
+            <a href="https://twitter.com/sunroomband?s=11" target="_blank" class="social-link">Twitter</a>
+            <a href="https://youtube.com/channel/UC_r-1VzvfoAcXMoTcPC7EJw" target="_blank" class="social-link">Youtube</a>
+          </div>
         </div>
       </div>
       <div class="div-block-7"><img src="images/accent-footer.png" loading="lazy" sizes="(max-width: 479px) 73vw, 316px" srcset="images/accent-footer-p-1080.png 1080w, images/accent-footer-p-1600.png 1600w, images/accent-footer.png 2411w" alt="" class="image-2"></div>
