--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 25 2022 19:47:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 10 2022 17:07:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6164da2f9ccb049e4091ad30" data-wf-site="6164da2f9ccb041c9691ad2f">
 <head>
   <meta charset="utf-8">
@@ -77,7 +77,7 @@
         </div>
         <div class="div-block-9">
           <div class="div-block-11">
-            <a href="https://instagram.com/sun____room?utm_medium=copy_link" target="_blank" class="social-link">Instagram</a>
+            <a href="https://www.instagram.com/sunroomband/" target="_blank" class="social-link">Instagram</a>
             <a href="https://vm.tiktok.com/TTPdrDHQjE/" target="_blank" class="social-link">TikTok</a>
             <a href="https://twitter.com/sunroomband?s=11" target="_blank" class="social-link">Twitter</a>
             <a href="https://youtube.com/channel/UC_r-1VzvfoAcXMoTcPC7EJw" target="_blank" class="social-link">Youtube</a>
