--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 10 2022 17:07:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 19 2022 22:11:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6164da2f9ccb049e4091ad30" data-wf-site="6164da2f9ccb041c9691ad2f">
 <head>
   <meta charset="utf-8">
@@ -62,8 +62,8 @@
   <div id="SHOWS" class="shows">
     <div class="w-container">
       <div class="html-embed w-embed w-script">
-        <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script>
-        <a class="bit-widget-initializer" data-artist-name="id_5146112" data-font="Helvetica" data-language="en" data-display-details="false" data-text-color="#000000" data-background-color="#e2ddbd" data-separator-color="#DDDDDD" data-popup-background-color="#ffffff" data-link-color="#A2A2A2" data-link-text-color="#FFFFFF"></a>
+        <div id="seated-55fdf2c0" data-artist-id="1c296b62-808e-4308-9d64-caf638c93409" data-css-version="2"></div>
+        <script src="https://widget.seated.com/app.js"></script>
       </div>
     </div>
   </div>
