Update tour script index.html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
   <div id="tour" class="tour">
     <div class="w-layout-blockcontainer container-m w-container">
       <div class="html-embed w-embed w-script">
-        <div id="seated-55fdf2c0" data-artist-id="1c296b62-808e-4308-9d64-caf638c93409" data-css-version="2"></div>
-        <script src="https://widget.seated.com/app.js"></script>
+        <div id="seated-55fdf2c0" data-artist-id="1c296b62-808e-4308-9d64-caf638c93409" data-css-version="2"></div><script src="https://widget.seated.com/app.js"></script>
       </div>
     </div>
   </div>
