Update TikTok link to new profile URL

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="div-block-9">
             <div class="div-block-11">
               <a href="https://www.instagram.com/sunroomband/" target="_blank" class="social-link">Instagram</a>
-              <a href="https://vm.tiktok.com/TTPdrDHQjE/" target="_blank" class="social-link">TikTok</a>
+              <a href="https://www.tiktok.com/@sunroomband" target="_blank" class="social-link">TikTok</a>
               <a href="https://twitter.com/sunroomband?s=11" target="_blank" class="social-link">Twitter</a>
               <a href="https://youtube.com/channel/UC_r-1VzvfoAcXMoTcPC7EJw" target="_blank" class="social-link">Youtube</a>
             </div>
